--- a/A-Loan-Data-Project-with-NumPy.ipynb
+++ b/A-Loan-Data-Project-with-NumPy.ipynb
@@ -97,7 +97,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Gustavo\\AppData\\Local\\Temp\\ipykernel_21852\\3857124428.py:2: RuntimeWarning: Mean of empty slice\n",
+      "C:\\Users\\Gustavo\\AppData\\Local\\Temp\\ipykernel_42596\\3857124428.py:2: RuntimeWarning: Mean of empty slice\n",
       "  temporary_mean = np.nanmean(raw_data_np, axis=0)\n"
      ]
     }
@@ -139,9 +139,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Gustavo\\AppData\\Local\\Temp\\ipykernel_21852\\4160623186.py:1: RuntimeWarning: All-NaN slice encountered\n",
+      "C:\\Users\\Gustavo\\AppData\\Local\\Temp\\ipykernel_42596\\4160623186.py:1: RuntimeWarning: All-NaN slice encountered\n",
       "  temporary_stats = np.array([np.nanmin(raw_data_np, axis = 0),\n",
-      "C:\\Users\\Gustavo\\AppData\\Local\\Temp\\ipykernel_21852\\4160623186.py:3: RuntimeWarning: All-NaN slice encountered\n",
+      "C:\\Users\\Gustavo\\AppData\\Local\\Temp\\ipykernel_42596\\4160623186.py:3: RuntimeWarning: All-NaN slice encountered\n",
       "  np.nanmax(raw_data_np, axis = 0)])\n"
      ]
     }
@@ -772,7 +772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -781,7 +781,7 @@
        "array(['36', '36', '36', ..., '36', '36', '36'], dtype='<U69')"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -793,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -802,7 +802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -811,7 +811,7 @@
        "array(['', '36', '60'], dtype='<U69')"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -822,7 +822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -831,7 +831,7 @@
        "array(['36', '36', '36', ..., '36', '36', '36'], dtype='<U69')"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -845,7 +845,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -854,13 +854,375 @@
        "array(['36', '60'], dtype='<U69')"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "np.unique(loan_data_strings[:,2])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Grade and Subgrade"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['issue_date', 'loan_status', 'term_months', 'grade', 'sub_grade', 'verification_status',\n",
+       "       'url', 'addr_state'], dtype='<U19')"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "header_strings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['C', 'A', 'B', ..., 'A', 'D', 'A'], dtype='<U69')"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "loan_data_strings[:,3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['', 'A', 'B', 'C', 'D', 'E', 'F', 'G'], dtype='<U69')"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.unique(loan_data_strings[:, 3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['', 'A1', 'A2', 'A3', 'A4', 'A5', 'B1', 'B2', 'B3', 'B4', 'B5', 'C1', 'C2', 'C3', 'C4',\n",
+       "       'C5', 'D1', 'D2', 'D3', 'D4', 'D5', 'E1', 'E2', 'E3', 'E4', 'E5', 'F1', 'F2', 'F3', 'F4',\n",
+       "       'F5', 'G1', 'G2', 'G3', 'G4', 'G5'], dtype='<U69')"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.unique(loan_data_strings[:,4])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Filling Subgrade"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in np.unique(loan_data_strings[:,3]):\n",
+    "    loan_data_strings[:,4] = np.where((loan_data_strings[:,4] == '') & (loan_data_strings[:,3] == i),\n",
+    "                                      i + '5',\n",
+    "                                      loan_data_strings[:, 4])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array(['5', 'A1', 'A2', 'A3', 'A4', 'A5', 'B1', 'B2', 'B3', 'B4', 'B5', 'C1', 'C2', 'C3', 'C4',\n",
+       "        'C5', 'D1', 'D2', 'D3', 'D4', 'D5', 'E1', 'E2', 'E3', 'E4', 'E5', 'F1', 'F2', 'F3', 'F4',\n",
+       "        'F5', 'G1', 'G2', 'G3', 'G4', 'G5'], dtype='<U69'),\n",
+       " array([  9, 285, 278, 239, 323, 592, 509, 517, 530, 553, 633, 629, 567, 586, 564, 577, 391, 267,\n",
+       "        250, 255, 288, 235, 162, 171, 139, 160,  94,  52,  34,  43,  24,  19,  10,   3,   7,   5],\n",
+       "       dtype=int64))"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.unique(loan_data_strings[:,4], return_counts= True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "loan_data_strings[:,4] = np.where(loan_data_strings[:,4] == '5',\n",
+    "                                  'H1',\n",
+    "                                  loan_data_strings[:,4])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['A1', 'A2', 'A3', 'A4', 'A5', 'B1', 'B2', 'B3', 'B4', 'B5', 'C1', 'C2', 'C3', 'C4', 'C5',\n",
+       "       'D1', 'D2', 'D3', 'D4', 'D5', 'E1', 'E2', 'E3', 'E4', 'E5', 'F1', 'F2', 'F3', 'F4', 'F5',\n",
+       "       'G1', 'G2', 'G3', 'G4', 'G5', 'H1'], dtype='<U69')"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.unique(loan_data_strings[:,4])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Removing Grade"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "loan_data_strings = np.delete(loan_data_strings, 3, axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['C3', 'A5', 'B5', ..., 'A5', 'D2', 'A4'], dtype='<U69')"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "loan_data_strings[:,3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "header_strings = np.delete(header_strings, 3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['issue_date', 'loan_status', 'term_months', 'sub_grade', 'verification_status', 'url',\n",
+       "       'addr_state'], dtype='<U19')"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "header_strings"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Converting SubGrade"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['A1', 'A2', 'A3', 'A4', 'A5', 'B1', 'B2', 'B3', 'B4', 'B5', 'C1', 'C2', 'C3', 'C4', 'C5',\n",
+       "       'D1', 'D2', 'D3', 'D4', 'D5', 'E1', 'E2', 'E3', 'E4', 'E5', 'F1', 'F2', 'F3', 'F4', 'F5',\n",
+       "       'G1', 'G2', 'G3', 'G4', 'G5', 'H1'], dtype='<U69')"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.unique(loan_data_strings[:,3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "keys = list(np.unique(loan_data_strings[:,3]))\n",
+    "values = list(range(1, np.unique(loan_data_strings[:,3]).shape[0] + 1))\n",
+    "dict_sub_grade = dict(zip(keys,values))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'A1': 1,\n",
+       " 'A2': 2,\n",
+       " 'A3': 3,\n",
+       " 'A4': 4,\n",
+       " 'A5': 5,\n",
+       " 'B1': 6,\n",
+       " 'B2': 7,\n",
+       " 'B3': 8,\n",
+       " 'B4': 9,\n",
+       " 'B5': 10,\n",
+       " 'C1': 11,\n",
+       " 'C2': 12,\n",
+       " 'C3': 13,\n",
+       " 'C4': 14,\n",
+       " 'C5': 15,\n",
+       " 'D1': 16,\n",
+       " 'D2': 17,\n",
+       " 'D3': 18,\n",
+       " 'D4': 19,\n",
+       " 'D5': 20,\n",
+       " 'E1': 21,\n",
+       " 'E2': 22,\n",
+       " 'E3': 23,\n",
+       " 'E4': 24,\n",
+       " 'E5': 25,\n",
+       " 'F1': 26,\n",
+       " 'F2': 27,\n",
+       " 'F3': 28,\n",
+       " 'F4': 29,\n",
+       " 'F5': 30,\n",
+       " 'G1': 31,\n",
+       " 'G2': 32,\n",
+       " 'G3': 33,\n",
+       " 'G4': 34,\n",
+       " 'G5': 35,\n",
+       " 'H1': 36}"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dict_sub_grade"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in np.unique(loan_data_strings[:,3]):\n",
+    "    loan_data_strings[:,3] = np.where(loan_data_strings[:,3] == i,\n",
+    "                                      dict_sub_grade[i],\n",
+    "                                      loan_data_strings[:,3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['1', '10', '11', '12', '13', '14', '15', '16', '17', '18', '19', '2', '20', '21', '22',\n",
+       "       '23', '24', '25', '26', '27', '28', '29', '3', '30', '31', '32', '33', '34', '35', '36',\n",
+       "       '4', '5', '6', '7', '8', '9'], dtype='<U69')"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.unique(loan_data_strings[:,3])"
    ]
   },
   {
